Closed Bug 847209 Opened 12 years ago Closed 12 years ago

Assertion failure: "aChild is not our child or on a frame list not supported by StealFrame" with floating first-letter

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(4 files)

Assertion failure: list && list->ContainsFrame(aChild) (aChild is not our child or on a frame list not supported by StealFrame), at layout/generic/nsContainerFrame.cpp:1249
Attached file stacks
Bug 847208 has a similar testcase.
The code is correct, it's just the assertion in nsContainerFrame::StealFrame that forgot to also check OverflowList.
Assignee: nobody → matspal
Severity: critical → normal
OS: Mac OS X → All
Hardware: x86_64 → All
Attached patch fix + testSplinter Review
Don't assert if the frame is in the kOverflowList child list.
Attachment #720669 - Flags: review?(bzbarsky)
Comment on attachment 720669 [details] [diff] [review] fix + test r=me
Attachment #720669 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: