Bug 847209 - Don't assert if the frame is in the kOverflowList child list.  r=bzbarsky